--- a/app/views/base.phtml
+++ b/app/views/base.phtml
@@ -42,7 +42,7 @@
         <div class="be-wrapper be-fixed-sidebar <?= (isset($aside) ? 'be-aside' : '') ?>">
             <nav class="navbar navbar-default navbar-fixed-top be-top-header">
                 <div class="container-fluid">
-                    <div class="navbar-header"><a href="index.html" class="navbar-brand"></a></div>
+                    <div class="navbar-header"><a href="<?= $this->pathFor('DashboardPage'); ?>" class="navbar-brand"></a></div>
                     <div class="be-right-navbar">
                         <ul class="nav navbar-nav navbar-right be-user-nav">
                             <li class="dropdown">
