--- a/app/views/history/a_rks.phtml
+++ b/app/views/history/a_rks.phtml
@@ -14,13 +14,12 @@
             <span class="timeline-time"><?= $this->indDateTime($history['waktu']) ?></span>
         </div>
         <div class="timeline-summary">
-            <div class="btn-group btn-group-xs btn-space">
-                <?php if($history['meta'] == 'diterima'): ?>
-                <button type="button" class="btn btn-success"><i class="icon mdi mdi-check-circle"></i></button>
-                <?php else: ?>
-                <button type="button" class="btn btn-danger"><i class="icon mdi mdi-close-circle-o"></i></button>
-                <?php endif; ?>
-                <button type="button" class="btn btn-default"><?= ucfirst($history['meta']) ?></button>
+            <?php $r_tender_meta = json_decode($history['meta'], true); ?>
+            <div role="alert" class="alert <?= $r_tender_meta['status'] == 'diterima' ? 'alert-success' : 'alert-danger' ?> alert-icon alert-icon-border alert-dismissible">
+                <div class="icon"><span class="mdi <?= $r_tender_meta['status'] == 'diterima' ? 'mdi-check' : 'mdi-close-circle-o' ?>"></span></div>
+                <div class="message">
+                    <strong><?= ucfirst($r_tender_meta['status']) ?></strong><br><?= $r_tender_meta['keterangan'] ?>
+                </div>
             </div>
         </div>
     </div>
