--- a/app/views/rks-acara/detail.phtml
+++ b/app/views/rks-acara/detail.phtml
@@ -248,6 +248,7 @@ $this->start('contents');
                         <div class="mod-icon"><span class="modal-main-icon mdi mdi-check"></span></div>
                         <h3>Awesome!</h3>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>Fusce ultrices euismod lobortis.</p>
+                        <textarea class="form-control keterangan hidden" rows="3" placeholder="Tambahkan keterangan kenapa anda menolak"></textarea>
                         <div class="xs-mt-50">
                             <button type="button" data-dismiss="modal" class="btn btn-space btn-action">Proceed</button>
                             <button type="button" data-dismiss="modal" class="btn btn-space btn-default">Batal</button>
@@ -331,6 +332,7 @@ $this->start('js');
                     modal.find('.mod-icon').removeClass('text-danger');
                     modal.find('.btn-action').addClass('btn-success');
                     modal.find('.btn-action').removeClass('btn-danger');
+                    modal.find('.keterangan').addClass('hidden');
                     modal.find('.btn-action').html('Setujui');
                 }
                 if(modData.type == 'ditolak'){
@@ -339,6 +341,7 @@ $this->start('js');
                     modal.find('.mod-icon').addClass('text-danger');
                     modal.find('.btn-action').removeClass('btn-success');
                     modal.find('.btn-action').addClass('btn-danger');
+                    modal.find('.keterangan').removeClass('hidden');
                     modal.find('.btn-action').html('Tolak');
                 }
                 modal.find('.btn-action').on('click', function () {
@@ -348,11 +351,13 @@ $this->start('js');
                     }else if(active_user.previledge == '3'){
                         who = 'manajer'
                     }
+                    var keterangan = modal.find('.keterangan').val();
                     $.post(
                         '<?= $this->pathFor('rksAcara_approval', ['id_tender'=>$tender['id_tender']]) ?>',
                         {
                             who:who,
-                            status:modData.type
+                            status:modData.type,
+                            keterangan:keterangan
                         },
                         function(data){
                             if(data.status == 'success'){
